# oficina_fabric_pucminas

./: README.md  main.py  mkdocs.yml  pyproject.toml
api/: gera_dados_venda.py
docs/: passo_a_passo.md
