[tool.poetry]
name = "oficina-fabric-pucminas"
version = "0.1.0"
description = ""
authors = ["Edvaldo Gutierres <edvaldo_gutierres@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.8.0"
mkdocs = "^1.6.1"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
faker = "^29.0.0"
requests = "^2.32.3"
mkdocs-material = "^9.5.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
